[project]
name = "milestoner"
version = "0.1.0"
description = "MCP server for sharing your build-in-public journey"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "gitpython>=3.1.0",
    "atproto>=0.0.50",
]

[project.scripts]
milestoner = "milestoner.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/milestoner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
